syntax = "proto3";
package store;

message BlockStoreState {
  int64 base = 1;
  int64 height = 2;
}